--- a/package.json
+++ b/package.json
@@ -11,22 +11,26 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.21.6",
+    "antd": "^5.22.1",
     "axios": "1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.6",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
-    "react-admin": "^5.3.1",
+    "react-admin": "^5.3.4",
     "react-bootstrap": "^2.10.5",
     "react-chartjs-2": "^5.2.0",
     "react-cookie": "^7.2.2",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
+    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-sidebar": "^3.0.2",
     "react-toastify": "^10.0.6",
     "sweetalert2": "^11.14.4",
     "sweetalert2-react-content": "^5.0.7",
